--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/tor"]
 	path = external/tor
-	url = https://git.torproject.org/git/tor.git
+	url = https://github.com/Deathmax/tor.git
 	ignore = dirty
 [submodule "external/libevent"]
 	path = external/libevent
